# azevedo-wolff-2025

./: .gitignore  .latexmkrc  README.md  agents.md  benchmarks.py  conclusion.tex  examples.tex  figure_maker.py  introduction.tex  main.py  make.sh  make_figures.py  model.tex  pack_arxiv.py  proof-main-result.tex  pyproject.toml  readme.md
interactive_dashboard/: dashboard.html  generate_data.py  index.html
interactive_dashboard/static/css/: index.css
output/: machine_specs.txt  timing_results.csv
py/: benchmark_assets.py  benchmarks.py  dg.py  figure_maker.py  solver_comparison.py
slides/: beamer-header.tex  slides.tex
tex/: appendix-proofs.tex  bibliography.bib  calculus.tex  conclusion.tex  counter-examples.tex  custom.sty  examples.tex  introduction.tex  linear-contracts.tex  literature-discussion.tex  main-result.tex  manuscript.tex  model.tex  numerical-methods.tex  proof-main-result.tex  si.tex
tex/tables/: distributions.tex  utility_functions.tex
