[project]
name = "azevedo-wolff-replication"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "moralhazard",
    "numpy>=2.3.5",
]

[tool.uv.sources]
moralhazard = { git = "https://github.com/eduardomazevedo/moralhazard.git", rev = "fe6e0b9080802d7162daf6b0cac66515f06f6d9f" }
