[project]
name = "azevedo-wolff-replication"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "moralhazard",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
]

[tool.uv.sources]
moralhazard = { git = "https://github.com/eduardomazevedo/moralhazard.git", rev = "dd3770410017feb9491cfc8479e1f01d1d9c4a96" }
